refactor/chore: rename entities, establish one-to-many relationship